# docker-chrome

./: Readme.md  build.sh
chr/: buildchrome.sh
chr/configs/54-gcc5.4/: args.gn  patch-16k.patch  patch-sysroot.patch  vars.sh
chr/configs/55-commit-5cc683b-gcc5.4/: patch-16k.patch  postbuild_hooks.sh  vars.sh
chr/configs/56-gcc4.9/: patch-sysroot.patch  patch-webrtc-screen_capturer_x11.patch  prebuild_hooks.sh  vars.rc  vars.sh
chr/configs/56-gcc5.4/: args.gn  patch-16k.patch
chr/configs/57-gcc5.4/: patch-16k.patch  vars.sh
chr/toolchains/: .gitignore
chr/toolchains/mipsel-gcc4.9-crosstool-ng/: build.log.bz2
chr/toolchains/mipsel-gcc4.9-crosstool-ng/lib/ldscripts/: elf32btsmip.x  elf32btsmip.xbn  elf32btsmip.xc  elf32btsmip.xd  elf32btsmip.xdc  elf32btsmip.xdw  elf32btsmip.xn  elf32btsmip.xs  elf32btsmip.xsc  elf32btsmip.xsw  elf32btsmip.xw  elf32btsmipn32.x  elf32btsmipn32.xbn  elf32btsmipn32.xc  elf32btsmipn32.xd  elf32btsmipn32.xdc  elf32btsmipn32.xdw  elf32btsmipn32.xn  elf32btsmipn32.xs  elf32btsmipn32.xsc  elf32btsmipn32.xsw  elf32btsmipn32.xw  elf32ltsmip.x  elf32ltsmip.xbn  elf32ltsmip.xc  elf32ltsmip.xd  elf32ltsmip.xdc  elf32ltsmip.xdw  elf32ltsmip.xn  elf32ltsmip.xs  elf32ltsmip.xsc  elf32ltsmip.xsw  elf32ltsmip.xw  elf32ltsmipn32.x  elf32ltsmipn32.xbn  elf32ltsmipn32.xc  elf32ltsmipn32.xd  elf32ltsmipn32.xdc  elf32ltsmipn32.xdw  elf32ltsmipn32.xn  (+26 more)
chr/toolchains/mipsel-gcc4.9-crosstool-ng/share/gdb/: gdbinit
docker_image/: Dockerfile  Dockerfile.base  Dockerfile.withdeps
(+26 files in other folders)
