is_clang = false
is_debug = false
mips_arch_variant = "r2"
target_os = "linux"
target_cpu = "mipsel"
enable_nacl=false
is_component_build = false
linux_use_bundled_binutils = false
use_gold = false
remove_webcore_debug_symbols=true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
treat_warnings_as_errors = false